--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+/node_modules.bak
 
 # testing
 /coverage
@@ -16,6 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.bak
 
 npm-debug.log*
 yarn-debug.log*
