--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
+    "global-hook-store": "^0.3.3",
     "mini-store": "^2.0.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
@@ -37,7 +38,8 @@
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
     "reactstrap": "^8.0.0",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "use-store": "^1.7.3"
   },
   "devDependencies": {
     "react-scripts": "^3.0.1"
